config/tekton/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubemate.mgoltzsche.github.com/rewrite-target: /
    kubemate.mgoltzsche.github.com/nav-title: Tekton Dashboard
    kubemate.mgoltzsche.github.com/nav-icon: /favicon.png
spec:
  ingressClassName: kubemate
  rules:
  - http:
      paths:
      - path: /tekton-dashboard/
        pathType: Prefix
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
